--- a/index.html
+++ b/index.html
@@ -762,19 +762,7 @@ public static Object[] processar(Map parametros) throws Throwable {
                 </section>
 
                 <section>
-                    <h2>Contatos</h2>
-                    <ul class="color4-darker">
-                        <li>Email: josenaldo@gmail.com</li>
-                        <li>Skype: josenaldo.matos</li>
-                        <li>Twitter: @josenaldomatos</li>
-                    </ul>
-                    <blockquote>
-                        <p>Mais uma pérola de sabedoria sobre POG</p>
-                        <cite>POGramador enfadado de aplicar a Reflexão Reprodutória.</cite>
-                    </blockquote>
-                </section>
-                <section>
-                    <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
+                    <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos - By josenaldo</h1>
                     <img src="img/pogramador.png" alt="Magníficas oportunidades!" class="img-center">
                 </section>
             </div>
