--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ public static Object[] processar(Map parametros) throws Throwable {
                 </section>
 
                 <section>
-                    <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos - By josenaldo</h1>
+                    <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
                     <img src="img/pogramador.png" alt="Magníficas oportunidades!" class="img-center">
                 </section>
             </div>
