--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/lib/css/zenburn.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/pog.css">
+        <link rel="stylesheet" href="./css/pog.css">
     </head>
     <body>
         <button class="theme-toggle" id="themeToggle" aria-label="Alternar tema">
@@ -766,6 +766,6 @@ export const processar = async (parametros: any): Promise<any> => {
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/reveal.js@3.9.2/js/reveal.min.js"></script>
-        <script src="js/pog.js"></script>
+        <script src="./js/pog.js"></script>
     </body>
 </html>
