--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
                 <section>
                     <h1>A arte da Programação Orientada à Gambiarra</h1>
                     <h3 class="color4-darker">Como garantir que o inferno seja uma amostra grátis do seu trabalho!</h3>
+                    <p class="color5-darker">O guia definitivo para escrever código que funciona... até funcionar</p>
                 </section>
 
                 <section>
-                    <h2>Agenda</h2>
+                    <h2>O que você vai aprender</h2>
                     <ol class="color4-darker">
                         <li>O que é POG</li>
                         <li>Histórico</li>
