--- a/index.html
+++ b/index.html
@@ -22,6 +22,56 @@
             <span class="moon-icon">🌙</span>
         </button>
 
+        <button class="help-toggle" id="helpToggle" aria-label="Atalhos de navegação">
+            ?
+        </button>
+
+        <div class="help-menu" id="helpMenu">
+            <h3>Atalhos de Navegação</h3>
+            <div class="help-content">
+                <div class="help-item">
+                    <kbd>→</kbd> <kbd>Space</kbd>
+                    <span>Próximo slide</span>
+                </div>
+                <div class="help-item">
+                    <kbd>←</kbd>
+                    <span>Slide anterior</span>
+                </div>
+                <div class="help-item">
+                    <kbd>Home</kbd>
+                    <span>Primeiro slide</span>
+                </div>
+                <div class="help-item">
+                    <kbd>End</kbd>
+                    <span>Último slide</span>
+                </div>
+                <div class="help-item">
+                    <kbd>F</kbd>
+                    <span>Tela cheia (Reveal)</span>
+                </div>
+                <div class="help-item">
+                    <kbd>F11</kbd>
+                    <span>Tela cheia (Navegador)</span>
+                </div>
+                <div class="help-item">
+                    <kbd>ESC</kbd>
+                    <span>Sair da tela cheia</span>
+                </div>
+                <div class="help-item">
+                    <kbd>O</kbd>
+                    <span>Visão geral dos slides</span>
+                </div>
+                <div class="help-item">
+                    <kbd>D</kbd>
+                    <span>Alternar tema claro/escuro</span>
+                </div>
+                <div class="help-item">
+                    <kbd>?</kbd>
+                    <span>Abrir/fechar este menu</span>
+                </div>
+            </div>
+        </div>
+
         <div class="reveal">
             <div class="slides">
                 <section>
