--- a/index.html
+++ b/index.html
@@ -854,6 +854,37 @@ export const processar = async (parametros: any): Promise<any> => {
                     <h1  class="color5-darker">Vida longa e próspera, jovens gafanhotos</h1>
                     <img src="img/pogramador.png" alt="Ilustração satírica de um programador cercado de gambiarras e código caótico" class="img-center">
                 </section>
+
+                <section aria-label="Créditos do projeto">
+                    <h2>Créditos</h2>
+                    <div class="credits-container">
+                        <p class="lead">Projeto original criado por</p>
+                        <p>
+                            <a href="https://github.com/josenaldo" target="_blank" rel="noopener noreferrer" class="color5-darker">
+                                Josenaldo Matos
+                                <span class="sr-only">(abre em nova aba)</span>
+                            </a>
+                        </p>
+                        <p>Utilizando POG, é claro! 😄</p>
+
+                        <p class="lead">Atualizado e modernizado 10 anos depois por</p>
+                        <p class="credits-author">
+                            <a href="https://github.com/kevinbds" target="_blank" rel="noopener noreferrer" class="color5-darker">
+                                Kevin Barreto
+                                <span class="sr-only">(abre em nova aba)</span>
+                            </a>
+                        </p>
+                        <p class="credits-description">
+                            Refatorou as POGs antigas para POGs modernas,<br>
+                            agora com acessibilidade, responsividade e dark mode.<br>
+                            Porque até gambiarra merece evolução!
+                        </p>
+                    </div>
+                    <blockquote>
+                        <p>O código legado é a POG de ontem que ainda funciona hoje!</p>
+                        <cite>Desenvolvedor mantendo código de 10 anos atrás</cite>
+                    </blockquote>
+                </section>
             </div>
         </main>
 
