--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <img src="img/Gregory_XIII.jpg" class="img-center img-70" alt="Retrato do Papa Gregório XIII, criador do calendário gregoriano que introduziu o ano bissexto como solução gambiarra">
                             </div>
                             <div class="col-md-8 color4-darker">
-                                <p class="lead">A primeira POG da história foi criada pelo Paga Gregório XIII</p>
+                                <p class="lead">A primeira POG da história foi criada pelo Papa Gregório XIII</p>
                                 <ul>
                                     <li>Nosso calendário: 365 dias</li>
                                     <li>Translação da Terra: 365,25</li>
