--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <dd>Use o código do sistema financeiro para criar o sistema de EAD.</dd>
 
                         <dt class="color4-darker">Reflexão Reprodutória</dt>
-                        <dd>Cópie o código da biblioteca XYZ. Ninguém vai notar.</dd>
+                        <dd>Copie o código da biblioteca XYZ. Ninguém vai notar.</dd>
 
                         <dt class="color4-darker">Redireção Tangencial</dt>
                         <dd>A culpa não é minha!</dd>
@@ -269,7 +269,7 @@
                     </dl>
                     <blockquote>
                         <p>Reza e cruza os dedos que vai funcionar! </p>
-                        <cite>POG Pai de Santo falando para um POGramador menos experimente... </cite>
+                        <cite>POG Pai de Santo falando para um POGramador menos experiente... </cite>
                     </blockquote>
                 </section>
 
